[PHOENIX-379] Changed instantiating Long objects to Long.valueOf